--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=sistematextil
 server.port=8080
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.url=jdbc:mysql://localhost:3306/sistema_textil
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
