--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,12 @@ spring.datasource.url=jdbc:mysql://mysql-you.ctm8k0q2a8uc.us-east-2.rds.amazonaw
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework.security=DEBUG
+
+
+#Escritura kebab case (JWT)
+application.jwt.secret-key=supersecretkeysupersecretkeykeysupersecretkey
+application.jwt.token-prefix=Bearer
+application.jwt.token-expiration-after-days=7
+application.jwt.refresh-token-expiration-after-days=30
