--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,15 +1,14 @@
 
-#server.port=8000
-#spring.datasource.url=jdbc:mysql://mysql-you.ctm8k0q2a8uc.us-east-2.rds.amazonaws.com:3306/sistema_textil
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-#spring.jpa.hibernate.ddl-auto=update
+server.port=8000
+spring.datasource.url=jdbc:mysql://mysql-you.ctm8k0q2a8uc.us-east-2.rds.amazonaws.com:3306/sistema_textil
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
 
-#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=DEBUG
 
-
-#Escritura kebab case (JWT)
-#application.jwt.secret-key=supersecretkeysupersecretkeykeysupersecretkey
-#application.jwt.token-prefix=Bearer
-#application.jwt.token-expiration-after-days=7
-#application.jwt.refresh-token-expiration-after-days=30
+Escritura kebab case (JWT)
+application.jwt.secret-key=supersecretkeysupersecretkeykeysupersecretkey
+application.jwt.token-prefix=Bearer
+application.jwt.token-expiration-after-days=7
+application.jwt.refresh-token-expiration-after-days=30
