feath: cambios agregados de color y talla

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.security=DEBUG
 
-Escritura kebab case (JWT)
+#Escritura kebab case (JWT)
 application.jwt.secret-key=supersecretkeysupersecretkeykeysupersecretkey
 application.jwt.token-prefix=Bearer
 application.jwt.token-expiration-after-days=7
