--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,27 @@
-# Perfil activo
-#spring.profiles.active=prod
+#Perfil activo
+
+spring.profiles.active=prod
 
 # Nombre de la aplicación
-#spring.application.name=sistematextil
+spring.application.name=sistematextil
 
 # Puerto del servidor
-#server.port=8080
+server.port=8080
 
 # Configuración de Base de Datos Local (MySQL)
-#spring.datasource.url=jdbc:mysql://localhost:3306/sistema_textil
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sistema_textil
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de JPA / Hibernate
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # CONFIGURACIÓN JWT (Obligatorio para que no dé error NullPointerException)
 # Nota: La secret-key debe ser larga. He usado la que tenías, pero sin el '#'
-#application.jwt.secret-key=supersecretkeysupersecretkeykeysupersecretkey
-#application.jwt.token-prefix=Bearer
-#application.jwt.token-expiration-after-days=7
-#application.jwt.refresh-token-expiration-after-days=30
+application.jwt.secret-key=supersecretkeysupersecretkeykeysupersecretkey
+application.jwt.token-prefix=Bearer
+application.jwt.token-expiration-after-days=7
+application.jwt.refresh-token-expiration-after-days=30
