feat: mejorar CORS y autenticación - permitir todos los orígenes, agregar rutas públicas, corregir NullPointerException en registro sin sucursal, y mejorar mensajes de error en login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ application.jwt.secret-key=supersecretkeysupersecretkeykeysupersecretkey
 application.jwt.token-prefix=Bearer
 application.jwt.token-expiration-after-days=7
 application.jwt.refresh-token-expiration-after-days=30
+
+
+cors.allowed-origins=*
+cors.allowed-methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
+cors.max-age=3600
