--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,3 +12,6 @@
 #application.jwt.token-prefix=Bearer
 #application.jwt.token-expiration-after-days=7
 #application.jwt.refresh-token-expiration-after-days=30
+cors.allowed-origins=*
+cors.allowed-methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
+cors.max-age=3600
