--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 #Perfil activo
-
 spring.profiles.active=prod
 
 # Nombre de la aplicación
@@ -19,15 +18,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# CONFIGURACIÓN JWT (Obligatorio para que no dé error NullPointerException)
-# Nota: La secret-key debe ser larga. He usado la que tenías, pero sin el '#'
+# CONFIGURACIÓN JWT
 application.jwt.secret-key=supersecretkeysupersecretkeykeysupersecretkey
 application.jwt.token-prefix=Bearer
-application.jwt.token-expiration-after-days=7
-application.jwt.refresh-token-expiration-after-days=30
+application.jwt.access-token-expiration-minutes=15
+application.jwt.refresh-token-expiration-days=7
 
+# CONFIGURACIÓN COOKIE (refresh token)
+application.jwt.cookie-secure=false
+application.jwt.cookie-domain=
 
-
+# CONFIGURACIÓN CORS
 cors.allowed-origins=*
 cors.allowed-methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
 cors.max-age=3600
