feat: refuerza auth y administración de usuarios
Agrega control por roles, cambio/reset de contraseña, paginación y búsqueda de usuarios, soft delete, ajustes de modelos/repositorios y script db/sistema_textil_v2.sql.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,15 +14,18 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # CONFIGURACIÓN JWT
 application.jwt.secret-key=supersecretkeysupersecretkeykeysupersecretkey
 application.jwt.token-prefix=Bearer
-application.jwt.access-token-expiration-minutes=15
+application.jwt.access-token-expiration-minutes=30
 application.jwt.refresh-token-expiration-days=7
+
+# CONFIGURACIÓN PAGINACIÓN
+application.pagination.default-size=10
 
 # CONFIGURACIÓN COOKIE (refresh token)
 application.jwt.cookie-secure=false
