feat: refactor CRUD de categoria/color/producto y mover configuracion AWS a variables de entorno

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Perfil activo
 spring.profiles.active=prod
+spring.config.import=optional:file:.env[.properties]
 
 # Nombre de la aplicación
 spring.application.name=sistematextil
@@ -35,3 +36,10 @@ application.jwt.cookie-domain=
 cors.allowed-origins=*
 cors.allowed-methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
 cors.max-age=3600
+
+
+#AWS (variables de entorno / .env)
+aws.access-key=${AWS_ACCESS_KEY:}
+aws.secret-key=${AWS_SECRET_KEY:}
+aws.region=${AWS_REGION:us-east-1}
+aws.s3.bucket=${AWS_S3_BUCKET:sistema-textil-cris-2026}
