--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,3 +15,8 @@
 cors.allowed-origins=*
 cors.allowed-methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
 cors.max-age=3600
+
+aws.access-key=${AWS_ACCESS_KEY:}
+aws.secret-key=${AWS_SECRET_KEY:}
+aws.region=${AWS_REGION:us-east-1}
+aws.s3.bucket=${AWS_S3_BUCKET:sistema-textil-cris-2026}
