--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,7 @@ aws.access-key=${AWS_ACCESS_KEY:}
 aws.secret-key=${AWS_SECRET_KEY:}
 aws.region=${AWS_REGION:us-east-1}
 aws.s3.bucket=${AWS_S3_BUCKET:sistema-textil-cris-2026}
+
+# Multipart uploads
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
